--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8F13KYT9F0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8F13KYT9F0');
+    </script>
+
     <link rel="icon" type="image/png" href="/assets/logo-andrea-512x512.png" />
     <meta name="description" content="" />
     
